# C-Algorithms

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  algorithms.sh  setup.sh
src/: CMakeLists.txt
src/array_list/: array_list.h
src/data_structure/array_list/: array_list.c  array_list.h
src/data_structure/hash_table/double_hashing/: hash_table.h
src/data_structure/hash_table/probing/linear/: hash_table.h
src/data_structure/hash_table/probing/quadratic/: hash_table.h
src/data_structure/linked_list/doubly/: doubly_linked_list.c  linked_list.c  linked_list.h
src/data_structure/linked_list/singly/: linked_list.c  singly_linked_list.c  singly_linked_list.h
src/data_structure/queue/array/: queue.c  queue.h
src/data_structure/queue/linked_list/: queue.h
src/data_structure/stack/array/: stack.h
src/data_structure/stack/linked_list/: stack.c  stack.h
src/linked_list/doubly/: doubly_linked_list.h
src/linked_list/singly/: singly_linked_list.h
src/memory/: memory.c  memory.h
src/queue/array/: queue.h
src/queue/linked_list/: queue.c  queue.h
src/stack/array/: stack.c  stack.h
src/stack/linked_list/: stack.h
src/util/: util.c  util.h
test/: CMakeLists.txt  main.c
test/array_list/: array_list_test.h
test/data_structure/array_list/: array_list_test.c  array_list_test.h
test/data_structure/hash_table/double_hashing/: hash_table_test.c  hash_table_test.h
test/data_structure/hash_table/probing/linear/: hash_table_test.c  hash_table_test.h
test/data_structure/hash_table/probing/quadratic/: hash_table_test.c  hash_table_test.h
test/data_structure/linked_list/doubly/: linked_list_test.h
test/data_structure/linked_list/singly/: linked_list_test.h
test/data_structure/queue/array/: queue_test.h
test/data_structure/queue/linked_list/: queue_test.h
test/data_structure/stack/array/: stack_test.h
test/data_structure/stack/linked_list/: stack_test.c  stack_test.h
test/linked_list/doubly/: linked_list_test.c  linked_list_test.h
test/linked_list/singly/: linked_list_test.c  linked_list_test.h
test/queue/array/: queue_test.c  queue_test.h
test/queue/linked_list/: queue_test.c  queue_test.h
test/stack/array/: stack_test.c  stack_test.h
test/stack/linked_list/: stack_test.h
test/suite/: suite.c  suite.h
